--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="author" content="Devcrud">
     <title>Nameera`s Portfolio Website</title>
     <!-- font icons -->
-    <link rel="stylesheet" href="public_html/assets/vendors/themify-icons/css/themify-icons.css">
+    <link rel="stylesheet" href="./assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + JohnDoe main styles -->
-	<link rel="stylesheet" href="public_html/assets/css/johndoe.css">
+	<link rel="stylesheet" href="./assets/css/johndoe.css">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
     <!-- <a href="components.html" class="btn btn-primary btn-component" data-spy="affix" data-offset-top="600"><i class="ti-shift-left-alt"></i> Components</a> -->
